--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="webstyle.css"/>
     <link rel="shortcut icon" href="/images/never-icon.gif" type="image/x-icon" />
     <script type="text/javascript">
-
+/*
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-19474758-1']);
   _gaq.push(['_trackPageview']);
@@ -15,32 +15,27 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
-    </script>
-    <script type="text/javascript">
-    <!--
+*/
 var gender;
 var year;
-
+     
 function initialize()
 {
   hideAllInfo();
   checkCookie();
 }
-
-      function hideAllInfo()
-      {
-        hide('info1');
-      }
-      function hide(s)
-      {
-        document.getElementById(s).style.visibility = "hidden";
-      }
-      function show(s)
-      {
-        document.getElementById(s).style.visibility = "visible";
-      }
-
+function hideAllInfo()
+{
+  hide('info1');
+}
+function hide(s)
+{
+  document.getElementById(s).style.visibility = "hidden";
+}
+function show(s)
+{
+  document.getElementById(s).style.visibility = "visible";
+}
 function hideDemographics()
 {
   var index1 = document.getElementById("demographics_form").rowIndex;
@@ -58,23 +53,21 @@ function submitInfo()
   else
   {
     alert("Please select your gender.");
-    break;
+    return;
   }
-
   if(document.getElementById("dem_freshman").checked==true)
     year =  2014;
   else if(document.getElementById("dem_sophomore").checked==true)
     year =  2013;
   else if(document.getElementById("dem_junior").checked==true)
     year =  2012;
-  else if(document.getElementById("dem_freshman").checked==true)
+  else if(document.getElementById("dem_senior").checked==true)
     year = 2011;
   else
   {
     alert("Please select your class year.");
-    break;
+    return;
   }
-
   setCookie("gender",gender,7);
   setCookie("year",year,7);
   hideDemographics();
@@ -84,36 +77,38 @@ function submitInfo()
 //Adapted from w3schools
 function getCookie(c_name)
 {
-if (document.cookie.length>0)
+  if (document.cookie.length>0)
   {
-  c_start=document.cookie.indexOf(c_name + "=");
-  if (c_start!=-1)
+    c_start=document.cookie.indexOf(c_name + "=");
+    if (c_start!=-1)
     {
-    c_start=c_start + c_name.length+1;
-    c_end=document.cookie.indexOf(";",c_start);
-    if (c_end==-1) c_end=document.cookie.length;
-    return unescape(document.cookie.substring(c_start,c_end));
+      c_start=c_start + c_name.length+1;
+      c_end=document.cookie.indexOf(";",c_start);
+      if (c_end==-1) c_end=document.cookie.length;
+      return unescape(document.cookie.substring(c_start,c_end));
     }
   }
-return "";
+  return "";
 }
 
 function setCookie(c_name,value,expiredays)
 {
-var exdate=new Date();
-exdate.setDate(exdate.getDate()+expiredays);
-document.cookie=c_name+ "=" +escape(value)+
-((expiredays==null) ? "" : ";expires="+exdate.toUTCString());
+  var exdate=new Date();
+  exdate.setDate(exdate.getDate()+expiredays);
+  document.cookie=c_name+ "=" +escape(value)+
+  ((expiredays==null) ? "" : ";expires="+exdate.toUTCString());
 }
 
 function checkCookie()
 {
-gender=getCookie('gender');
-year = getCookie('year');
-if (gender!=null && year!=null)
-  hideDemographics();
+  gender = getCookie('gender');
+  year = getCookie('year');
+  if(gender!="" && gender!=null && year!="" && year!=null)
+  {
+    hideDemographics();
+  }
 }
-    -->
+
     </script>
   </head>
   <body onload="initialize();">
@@ -160,7 +155,7 @@ if (gender!=null && year!=null)
 	  	    <input type="radio" name="class" value="male" id="dem_junior"/> Junior &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   		    <input type="radio" name="class" value="male" id="dem_senior"/> Senior
 		  </td>
-	          <td colspan="2" valign ="center" align="center" width="200px"><input id="demographicsbutton" type="submit" name="demographics" value="Submit" onclick="submitInfo()">
+	          <td colspan="2" valign ="center" align="center" width="200px"><input id="demographicsbutton" type="submit" name="demographics" value="Submit" onclick="submitInfo();">
 	          </td>
                 </tr>
 	      </table>
